force-app/main/default/objects/ReportConfigurationItem__c/ReportConfigurationItem__c.object-meta.xml
<CustomObject>
    <label>Report Configuration Item</label>
    <nameField>
        <label>Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Configuration Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>