force-app/main/default/objects/ReportConfigurationItem__c/fields/Cyclical__c.field-meta.xml
<CustomField>
    <fullName>Cyclical__c</fullName>
    <label>Cyclical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>