force-app/main/default/objects/ReportConfigurationItem__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <formula>IF( CONTAINS( ReportConfigurationInformation__r.RecordType.Name , &apos;Monthly Report&apos; ) , Cyclical__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>