force-app/main/default/objects/ReportConfigurationItem__c/fields/ReportConfigurationInformation__c.field-meta.xml
<CustomField>
    <fullName>ReportConfigurationInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Configuration Information</label>
    <referenceTo>ReportConfigurationInformation__c</referenceTo>
    <relationshipLabel>Report Configuration Items</relationshipLabel>
    <relationshipName>Report_Configuration_Items</relationshipName>
    <type>Lookup</type>
</CustomField>