force-app/main/default/objects/ReportConfigurationItem__c/fields/StartDay__c.field-meta.xml
<CustomField>
    <fullName>StartDay__c</fullName>
    <label>Start Day</label>
    <type>Date</type>
</CustomField>