force-app/main/default/objects/ReportConfigurationItem__c/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <formula>IF( CONTAINS( ReportConfigurationInformation__r.RecordType.Name , &apos;Weekly Report&apos; ) ,  Cyclical__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>